menambahkan style ke experience section

--- a/style.css
+++ b/style.css
@@ -196,7 +196,31 @@ li a {
     transition: 0.2s ease-in-out;
 }
 
-.grid-card i :hover {
-    transform: scale(1.1);
+.grid-card:hover {
+    transform: scale(1.02);
+    background-color: black;
+    color: white;
 }
+
+.grid-card i {
+    font-size: 24px;
+    margin-bottom: 16px;
+}
+
+.grid-card span {
+    font-size: 24px;
+    font-weight: 500;
+    background: linear-gradient(to right, rgb(0,157,255), rgb(255,0,255));
+    background-clip: text;
+    color: transparent;
+}
+
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+::-webkit-scrollbar-track{
+    color:rgb(91, 91, 167);
+}
+
 /* Experience End */
